BDatos, Creación de objeto contacto y generación de ListeView

--- a/HappyBirthdayJLG/app/src/main/res/layout/activity_main.xml
+++ b/HappyBirthdayJLG/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.egibide.a8fprogmm09.happybirthdayjlg.MainActivity">
 
-    <TextView
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:id="@+id/lstContactos"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
