--- a/HappyBirthdayJLG/app/src/main/res/layout/fila_lista.xml
+++ b/HappyBirthdayJLG/app/src/main/res/layout/fila_lista.xml
@@ -2,20 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:weightSum="1">
 
     <ImageView
         android:id="@+id/icon"
         android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:padding="5dp" />
+        android:layout_height="106dp"
+        android:padding="5dp"
+        android:layout_weight="0.20" />
 
     <LinearLayout android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/texto_principal"
+            android:id="@+id/texto_nombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Medium Text"
@@ -25,10 +27,22 @@
             android:padding="2dp"
             android:textColor="#489e37" />
         <TextView
-            android:id="@+id/texto_secundario"
+            android:id="@+id/texto_telefono"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text=""
+            android:layout_marginLeft="10dp"/>
+        <TextView
+            android:id="@+id/texto_nacimiento"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:layout_marginLeft="10dp"/>
+        <TextView
+            android:id="@+id/texto_notificacion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
             android:layout_marginLeft="10dp"/>
     </LinearLayout>
 
